src/test/ui/generic-associated-types/bugs/issue-80626.stderr
error[E0275]: overflow evaluating the requirement `LinkedList<A>: Sized`
  --> $DIR/issue-80626.rs:12:10
   |
LL |     Next(A::Allocated<Self>)
   |          ^^^^^^^^^^^^^^^^^^
   |
note: required by a bound in `Allocator::Allocated`
  --> $DIR/issue-80626.rs:7:20
   |
LL |     type Allocated<T>;
   |                    ^ required by this bound in `Allocator::Allocated`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
